# nai-planner

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/rules/: workflow.md
.claude/skills/: WORKFLOW.md
.claude/skills/api-audit/: SKILL.md
.claude/skills/dep-audit/: SKILL.md
.claude/skills/full-app-audit/: SKILL.md
.claude/skills/perf-audit/: SKILL.md
.claude/skills/pre-commit/: SKILL.md
.claude/skills/push-changelog/: SKILL.md
.claude/skills/re-executed/: SKILL.md
.claude/skills/release-check/: SKILL.md
.claude/skills/resume/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/test-suite/: SKILL.md
.claude/skills/validate/: SKILL.md
docs/plans/: 2026-03-25-nai-planner-integration.md
nai_planner/: __init__.py  admin.py  apps.py  conf.py  signals.py  tasks.py
nai_planner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
nai_planner/contrib/drf/: filters.py  serializers.py  urls.py  views.py
nai_planner/contrib/ninja/: schemas.py  views.py
nai_planner/management/commands/: setup_planner_beat.py
nai_planner/migrations/: 0001_initial.py
nai_planner/models/: __init__.py  planner_item.py
tests/: settings.py  test_models.py  test_tasks.py
